syntax = "proto3";
package nixbuildpb;

message ClientPayload {
  Build build = 1;
  CompressedFile file = 2;
}

message CompressedFile {
  bytes body = 1;
  string name = 2;
  bytes requested_hash = 3;
  string path = 4;
}

message ServerPayload {
  repeated CompressedFile files = 1;
  repeated HashRequest hash_needed = 2;
  repeated string log = 3;
}

message HashRequest {
  bytes hash = 1;
  string path = 2;
}

message Build {
  string name = 1;
  repeated File files = 2;
  string build_location = 3;
}

message File {
  string path = 1;
  string name = 2;
  bool is_dir = 3;
  int64 size = 4;
  bytes hash = 5;
}
message HealthPayload {

}
message HealthResponse {
  int32 code = 1;
  string msg = 2;
}

service BuildService {
  rpc Build(stream ClientPayload) returns (stream ServerPayload);

  rpc Health(HealthPayload) returns (HealthResponse);
}
